Need to add  back in for dev114 to proceed.

--- a/Docker/Dockerfile-ORE-App
+++ b/Docker/Dockerfile-ORE-App
@@ -11,6 +11,9 @@ RUN mkdir /ore/App
 
 COPY --from=env_ore /usr/local/bin /ore/App
 
+# Needed to prevent error on Jenkins. Not needed locally.
+RUN true
+
 COPY --from=env_ore /usr/local/lib /usr/local/lib
 
 # Install Python solely to run the examples
