--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib:
-    image: env_quantlib:1.14_da38d9f8c
+    image: env_quantlib:1.14_c6d245bae
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
