[touch:985,1004]improve logging of LGM calibration, allow to continue processing if calibration threshold is exceeded

--- a/OREData/ored/CMakeLists.txt
+++ b/OREData/ored/CMakeLists.txt
@@ -197,6 +197,7 @@ model/lgmbuilder.hpp
 model/lgmdata.hpp
 model/marketobserver.hpp
 model/modelbuilder.hpp
+model/structuredmodelerror.hpp
 model/utilities.hpp
 portfolio/bond.hpp
 portfolio/builders/bond.hpp
