fix windows build

--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -471,6 +471,9 @@
     <ClInclude Include="ored\model\structuredmodelerror.hpp">
       <Filter>model</Filter>
     </ClInclude>
+    <ClInclude Include="ored\portfolio\builders\cpicapfloor.hpp">
+      <Filter>portfolio\builders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ored\configuration\capfloorvolcurveconfig.cpp">
@@ -832,6 +835,9 @@
     </ClCompile>
     <ClCompile Include="ored\configuration\volatilityconfig.cpp">
       <Filter>configuration</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\portfolio\builders\cpicapfloor.cpp">
+      <Filter>portfolio\builders</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
