--- a/OREData/test/OREDataTestSuite.vcxproj.filters
+++ b/OREData/test/OREDataTestSuite.vcxproj.filters
@@ -130,5 +130,8 @@
     <ClCompile Include="expiry.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="cpicapfloor.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
