--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -7,4 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
       args:
-        - boost_version=1.69.0
+        - boost_version=1.72.0
+        - num_cores=16
